Adding log interface

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
 	"description": "Library for relation between API interfaces",
 	"type": "library",
 	"require": {
-		"php-ds/php-ds": "dev-master"
+		"php": "^7.4",
+		"php-ds/php-ds": "dev-master",
+		"psr/log": "^1.0.1"
 	},
 	"autoload": {
 		"psr-4": {
