--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"require": {
 		"php": ">=8.0",
 		"php-ds/php-ds": ">=1.4",
-		"psr/log": "^1.0.1"
+		"psr/log": "3.*"
 	},
 	"autoload": {
 		"psr-4": {
